[package]
name = "solana_god"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.5", features = ["derive"] }
solana-program = "2.2.1"
solana-sdk-ids = "3.1.0"
solana-system-interface = "3.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "2.2.0"
solana-sdk = "2.2.1"
tokio = "1.43.0"
